# leveldb-minecraft-jni

./: build.gradle.kts  settings.gradle.kts
jni/: CMakeLists.txt  DB.cpp  DBIterator.cpp  WriteBatch.cpp  utils.hpp
jni/include/leveldb/: options.h
jni/lib/: zlibstatic.lib
src/main/java/cx/minecraft/leveldb/: CompressionType.java  CorruptException.java  DB.java  DBIterator.java  NativeObject.java  Options.java  ReadOptions.java  Snapshot.java  WriteBatch.java  WriteOptions.java
src/test/java/cx/minecraft/leveldb/: DBTest.java
